intro dets stamp align fix

--- a/styles.css
+++ b/styles.css
@@ -690,16 +690,16 @@ form {
   }
 
   .p1-mob {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 
   .hlight-det-mob {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
 
   .icon-img {
-    width: 20px;
-    margin-right: 20px;
+    width: 18px;
+    margin-right: 15px;
   }
 
   .mul-stamp-logo-img {
@@ -757,7 +757,7 @@ form {
 
   .transp-intro-text-container {
     text-align: left;
-    width: 80%;
+    width: 90%;
     padding: 10% 0 3% 0;
     margin: auto;
   }
